@@ -9,7 +9,6 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @NoArgsConstructor
@@ -44,7 +43,7 @@ public class UserFindDTO {
         this.phone = new PhoneDTO(user.getPhone());
         this.address = new AddressDTO(user.getAddress());
         this.children = user.getChildren()
-                        .stream().map(ChildFindDTO::new).collect(Collectors.toList());
+                        .stream().map(ChildFindDTO::new).toList();
     }
 
 }
